--- a/src/static/index.html
+++ b/src/static/index.html
@@ -38,6 +38,7 @@
                 <p>${details.description}</p>
                 <p><strong>Schedule:</strong> ${details.schedule}</p>
                 <p><strong>Max Participants:</strong> ${details.max_participants}</p>
+                <p><strong>Current Participants:</strong> ${details.participants.length}</p>
                 <div>
                   <strong>Participants:</strong>
                   <ul>
